Fixed graph controls, limiting options to prevent date overlapping

--- a/ckanext/ga_report/public/css/ga_report.css
+++ b/ckanext/ga_report/public/css/ga_report.css
@@ -9,6 +9,7 @@
   overflow: hidden;
 }
 .rickshaw_chart_container {
+  display: inline-block;
   position: relative;
   height: 350px;
   margin-top: 26px;
